UI updates, added new audio file, improved scripts, and reorganized project files

--- a/test-settings.html
+++ b/test-settings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Settings - Haunted Chamber</title>
+    <title>Test Settings - The Spectral Haven</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/themes.css">
     <link rel="stylesheet" href="styles/components.css">
