--- a/test-candle-timer.html
+++ b/test-candle-timer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Candle Timer - Haunted Chamber</title>
+    <title>Test Candle Timer - The Spectral Haven</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/themes.css">
     <link rel="stylesheet" href="styles/components.css">
