--- a/test-home-page.html
+++ b/test-home-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Home Page - Haunted Chamber</title>
+    <title>Test Home Page - The Spectral Haven</title>
 </head>
 <body>
     <h1>Home Page Widget Test</h1>
