--- a/test-mood-tracker.html
+++ b/test-mood-tracker.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mood Tracker Test - Haunted Chamber</title>
+    <title>Mood Tracker Test - The Spectral Haven</title>
     
     <!-- CSS Files -->
     <link rel="stylesheet" href="styles/main.css">
