Added new Stitch Lab and feature modules, updated scripts and components, integrated new audio effects, and improved UI structure

--- a/index.html
+++ b/index.html
@@ -136,7 +136,16 @@
                 <button class="nav-icon" data-route="/candle" title="Nightfall Candle (6)" aria-label="Navigate to Candle Timer">
                     <span class="icon">🕯️</span>
                 </button>
-                <button class="nav-icon" data-route="/settings" title="Settings (7)" aria-label="Navigate to Settings">
+                <button class="nav-icon" data-route="/tictactoe" title="Tic-Tac-Toe (7)" aria-label="Navigate to Tic-Tac-Toe">
+                    <span class="icon">🎮</span>
+                </button>
+                <button class="nav-icon" data-route="/title-generator" title="Title Generator (8)" aria-label="Navigate to Title Generator">
+                    <span class="icon">📸</span>
+                </button>
+                <button class="nav-icon" data-route="/radiant-sphere" title="Radiant Sphere (9)" aria-label="Navigate to Radiant Sphere">
+                    <span class="icon">🔮</span>
+                </button>
+                <button class="nav-icon" data-route="/settings" title="Settings (0)" aria-label="Navigate to Settings">
                     <span class="icon">⚙️</span>
                 </button>
             </div>
